Allow reading file from a folder;